Bug Fix on Mobile : Nav and Cards

--- a/src/styles/components/HamburgerMenu.css
+++ b/src/styles/components/HamburgerMenu.css
@@ -29,7 +29,7 @@
 .hamburger__menu__container label span {
   /* background-color: var(--primary-color); */
   border-radius: 10px;
-  height: 5px;
+  height: 3px;
   margin: 5px 0;
   transition: 800ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
   -webkit-transition: 800ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
