--- a/src/styles/components/ServicePage.css
+++ b/src/styles/components/ServicePage.css
@@ -25,7 +25,7 @@
   min-width: 300px;
   margin-left: auto;
   margin-right: auto;
-  width: 92%;
+  width: 85%;
   height: 325px;
   margin-top: 50px;
   display: flex;
